@@ -7,18 +7,24 @@ SYNOPSIS
      my @sections = sections($file_or_module[, $section]);
 
 SUBROUTINES
-    "get($file_or_module[, $section[, $number_of_example]])"
-             Returns code of example.
-             $file_or_module    - File with pod doc or perl module.
-             $section           - Pod section with example. Default value is 'EXAMPLE'.
-             $number_of_example - Number of example. If exists 'EXAMPLE1' and 'EXAMPLE2'
-                                  sections, then this number can be '1' or '2'.
-                                  Default value is nothing.
+  "get"
+     my $example = get($file_or_module[, $section[, $number_of_example]]);
 
-    "sections($file_or_module[, $section])"
-             Returns array of example sections.
-             $file_or_module - File with pod doc or perl module.
-             $section - Pod section with example. Default value is 'EXAMPLE'.
+    Returns code of example.
+
+     $file_or_module    - File with pod doc or perl module.
+     $section           - Pod section with example. Default value is 'EXAMPLE'.
+     $number_of_example - Number of example. If exists 'EXAMPLE1' and 'EXAMPLE2'
+                          sections, then this number can be '1' or '2'.
+                          Default value is nothing.
+
+  "sections"
+     my @sections = sections($file_or_module[, $section]);
+
+    Returns array of example sections.
+
+     $file_or_module - File with pod doc or perl module.
+     $section - Pod section with example. Default value is 'EXAMPLE'.
 
 ERRORS
      get():
@@ -72,8 +78,9 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © 2011-2018 Michal Josef Špaček
-     BSD 2-Clause License
+    © 2011-2018 Michal Josef Špaček
+
+    BSD 2-Clause License
 
 VERSION
     0.09
